--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.222881937264!2d-80.04756988506746!3d40.38175257936916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8834f77176620a31%3A0x9a1abeebcf54748f!2s20%20Cedar%20Blvd%2C%20Pittsburgh%2C%20PA%2015228!5e0!3m2!1sen!2sus!4v1638164007599!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
                     <!-- Primary location address-->
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text" style="padding: 5%; padding-top: 0;">
                             20 Cedar Blvd <br>
                             Pittsburgh, Pennsylvania 15228, US
                         </p>
@@ -157,7 +157,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.9027319878205!2d-80.0889834850572!3d40.65407447933829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88348832a6eb8589%3A0x50811f8dac3881cc!2s1%20Williamsburg%20Pl%20%23230%2C%20Warrendale%2C%20PA%2015086!5e0!3m2!1sen!2sus!4v1638164414786!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
                     <!-- South Hills address -->
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text" style="padding: 5%; padding-top: 0;">
                             1 Williamsburg Pl <br>
                             Suite 230
                             Warrendale, Pennsylvania 15086, US </p>
